--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center>
 <font size="7">
 <br />
-<a href="itms-services://?action=download-manifest&amp;url=https://shiftapps.github.io/KintaiLite/KintaiLite.plist">勤給解決Liteのダウンロード(v0.1)</a>
+<a href="itms-services://?action=download-manifest&amp;url=https://shiftapps.github.io/KintaiLite/KintaiLite.plist">勤給解決Liteのインストール(v0.2)</a>
 </font><br /><br />
 </center>
 </body>
