--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <center>
 <font size="7">
 <br />
-<a href="itms-services://?action=download-manifest&amp;url=https://shiftapps.github.io/KintaiLite/KintaiLite.plist">カラレコのインストール</a>
+<a href="itms-services://?action=download-manifest&amp;url=https://shiftapps.github.io/KintaiLite/KintaiLite.plist">カラ・レコのインストール</a>
 </font><br /><br />
 </center>
 </body>
